Attmpt to fix middle text and button and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,13 @@ body {
 
 
 
-.container .content h3{
+.container h3{
    font-size: 30px;
    color: white;
    text-align: center;
 }
 
-.container .content h3 span{
+.container h3 span{
    background: lightblue;
    border-radius: 5px;
    padding:0 15px;
@@ -41,27 +41,27 @@ body {
 
 }
 
-.container .content h1{
+.container  h1{
    font-size: 50px;
    color: white;
    text-align: center;
 
 }
 
-.container .content h1 span{
+.container h1 span{
    color:crimson;
    text-align: center;
 
 }
 
-.container .content p{
+.container  p{
    font-size: 25px;
    margin-bottom: 20px;
    text-align: center;
 
 }
 
-.container .content .btn{
+.container .btn{
    display: flex;
    font-size: 20px;
    background: #333;
@@ -73,7 +73,7 @@ body {
 
 }
 
-.container .content .btn:hover{
+.container .btn:hover{
    background: lightblue;
 }
 
